# math-for-programmers

./: LICENSE  README.md  pyproject.toml
ch02/: NOTES.md
ch03/: NOTES.md
ch05/: NOTES.md
ch06/: NOTES.md
ch07/: NOTES.md
ch08/: NOTES.md
ch09/: NOTES.md
ch10/: NOTES.md
ch11/: NOTES.md
ch12/: NOTES.md
ch13/: NOTES.md
ch14/: NOTES.md
ch15/: NOTES.md
ch16/: NOTES.md
